<resources>
    <string name="app_name">InSpace</string>
    <string name="earth_photo_item">EarthCamera</string>
    <string name="mars_photo_item">MarsEstates</string>
    <string name="main_picture_item">Home</string>
    <string name="refresh_tittle">Refresh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_text">Select an action</string>
    <string name="share">Share</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="share_photo">Share photo</string>
    <string name="display_type">Opportunity: %s</string>
    <string name="display_price">Price: %s$</string>
    <string name="instagram">Instagram</string>
    <string name="internet_connection_text">Internet not available!</string>
    <string name="check_internet_text">Check your network connection</string>
    <string name="marmalade">Marmalade</string>
    <string name="discord">Discord</string>
    <string name="channel_name">Space notification channel</string>
    <string name="channel_description">Notification channel for long user inactivity</string>
    <string name="notification_text">Dear friend! Spaceships cannot exist without their pilots… Join us soon!</string>
    <string name="notification_tittle">We\'ve been waiting for you!</string>
    <string name="telegram">Telegram</string>
    <string name="instagram_link">https://www.instagram.com/marmallaade/</string>
    <string name="telegram_link">https://t.me/Marmalllade</string>
    <string name="discord_link">https://discordapp.com/users/Marmalade</string>
    <string name="follow_link_instagram">Сlick to go to instagram</string>
    <string name="follow_link_telegram">Сlick to go to telegram</string>
    <string name="follow_link_discord">Сlick to go to discord</string>
    <string name="back_button_text">I get it</string>
    <string name="creator">Developer</string>
    <string name="info_text">In this not very large application, you can go on a space trip and see various pictures and other information, related to the vast cosmos. Good luck!
</string>
    <string name="parse_color">#2f2f2f</string>
    <string name="first_filter_menu_item">All places</string>
    <string name="second_filter_menu_item">For sale</string>
    <string name="toast_text">Easter egg found!</string>
    <string name="third_filter_menu_item">For rent</string>
    <string name="terrain">Terrain</string>

</resources>