<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <View
        android:layout_width="20dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/bottom_sheet_item_space"
        android:background="@drawable/line_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/normal_space"
        android:text="@string/action_text"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/bottom_sheet_item_space"
        android:background="@color/color_lightGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/share_button"
            style="@style/BottomSheetCustomButton"
            android:layout_weight="1"
            android:text="@string/share"
            android:layout_marginStart="@dimen/normal_space"
            app:icon="@drawable/ic_baseline_share_24" />

        <Button
            android:id="@+id/set_wallpaper_button"
            style="@style/BottomSheetCustomButton"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/normal_space"
            android:text="@string/wallpaper"
            app:icon="@drawable/ic_baseline_wallpaper_24" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/bottom_sheet_item_space"
        android:layout_marginBottom="@dimen/bottom_sheet_item_space"
        android:background="@color/color_lightGray" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/bottom_sheet_item_space"
        android:src="@drawable/ic_earth"
        app:riv_corner_radius="10dp" />

</LinearLayout>