<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="20dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/bottom_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/bottom_sheet_item_space"
            android:background="@drawable/ic_bottom_arrow" />

        <TextView
            android:id="@+id/choose_action_text"
            style="@style/TextViewPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/normal_space"
            android:text="@string/action_text"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/bottom_sheet_item_space"
            android:background="@color/color_lightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/share_button"
                style="@style/BottomSheetCustomButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/normal_space"
                android:layout_weight="1"
                android:text="@string/share"
                app:icon="@drawable/ic_baseline_share_24" />

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:id="@+id/set_wallpaper_button"
                style="@style/BottomSheetCustomButton"
                android:layout_marginEnd="@dimen/normal_space"
                android:layout_weight="1"
                android:text="@string/wallpaper"
                app:icon="@drawable/ic_baseline_wallpaper_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/bottom_sheet_item_space"
            android:layout_marginBottom="@dimen/bottom_sheet_item_space"
            android:background="@color/color_lightGray" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/earth_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/normal_space"
            android:src="@drawable/ic_earth"
            app:riv_corner_radius="10dp" />

    </LinearLayout>
</layout>