<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.inspace.developerinformation.DeveloperInformationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_instagram"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:layout_marginLeft="@dimen/cardview_margin"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginRight="@dimen/cardview_margin"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onInstagramCardViewCLick()}"

                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_instagram_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/instagram"
                                android:textColor="@color/white"
                                android:textSize="24sp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/marmalade" />


                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/ic_instagram" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:text="@string/follow_link_instagram"
                            android:textAlignment="center" />

                    </RelativeLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_discord"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:layout_marginLeft="@dimen/cardview_margin"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginRight="@dimen/cardview_margin"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onTelegramCardViewCLick()}"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_telegram_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/telegram"
                                android:textColor="@color/white"
                                android:textSize="24sp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/marmalade"
                                android:textColor="#90FFFFFF" />


                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/ic_telegram" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:text="@string/follow_link_telegram"
                            android:textAlignment="center" />

                    </RelativeLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_telegram"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:layout_margin="@dimen/cardview_margin"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onDiscordCardViewCLick()}"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_discord_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/discord"
                                android:textColor="@color/white"
                                android:textSize="24sp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/marmalade"
                                android:textColor="#90FFFFFF" />


                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/ic_discord" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:text="@string/follow_link_discord"
                            android:textAlignment="center" />

                    </RelativeLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>